--- a/templates/dma.conf.j2
+++ b/templates/dma.conf.j2
@@ -14,7 +14,7 @@ AUTHPATH /etc/dma/auth.conf
 STARTTLS
 {% endif %}
 MAILNAME {{ dma_mailname | default(ansible_nodename) }}
-{% if dma_insecure is defined %}
+{% if dma_dma_plaintext_auth is defined %}
 INSECURE
 {% endif %}
 {% if dma_masquerade is defined %}
